<resources>
    <string name="mch_ooooo">参数不正确验证不通过</string>
    <string name="mch_srl_header_pulling">Pull down to refresh</string>
    <string name="mch_srl_header_refreshing">Refreshing ...</string>
    <string name="mch_srl_header_loading">Loading ...</string>
    <string name="mch_srl_header_release">Release to refresh</string>
    <string name="mch_srl_header_finish">Refresh done</string>
    <string name="mch_srl_header_failed">Refresh failed</string>
    <string name="mch_srl_header_update">M-d HH:mm</string>
    <string name="mch_srl_header_secondary">Release to go to the second reply</string>
    <string name="mch_srl_footer_pulling">Pull up to load more</string>
    <string name="mch_srl_footer_release">Release to load</string>
    <string name="mch_srl_footer_loading">Loading ...</string>
    <string name="mch_srl_footer_refreshing">Refreshing ...</string>
    <string name="mch_srl_footer_finish">Loaded</string>
    <string name="mch_srl_footer_failed">Loading failed</string>
    <string name="mch_srl_footer_nothing">No more data</string>
    <string name="mch_confirm_format">%1$s(%2$d/%3$d)</string>
    <string name="mch_srl_content_empty">SmartRefreshLayout中没有找到内容视图。您是否忘记在xml布局文件中添加？</string>
    <string name="mch_srl_component_falsify" formatted="false">%s 虚假区域\n代表运行时拖动的高度【%.1fdp】 \n而不会显示任何东西</string>
    <string name="coupon">Coupon：</string>
    <string name="loading_price_usd">Load（Price：USD 0）</string>
    <string name="item_name_label">Item：</string>
    <string name="usdt">USDT</string>
    <string name="usdc">USDC</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="usdt_label">USD：</string>
    <string name="ylp_balance_label">YLPD Balance：</string>
    <string name="ylp_label">USD：</string>
    <string name="amount_to_pay_label">Payable：</string>
    <string name="ylp_20_off">YLP(20% off)</string>
    <string name="usd">USD</string>
    <string name="get_code">Get a code</string>
    <string name="email_verification_code">Email Code</string>
    <string name="sms_verification_code">SMS verification code</string>
    <string name="random_discount">Lucky Discount</string>
    <string name="transaction_password">Transaction password</string>
    <string name="pay_now">Submit</string>
    <string name="scan_barcode_to_pay"><![CDATA[Pay by barcode>]]></string>
    <string name="more_payment_methods"><![CDATA[More Payment Method >]]></string>
    <string name="initiating_payment_please_wait">Establishing secure connection for payment ...</string>
    <string name="alt_accounts_management">Alt Accounts</string>
    <string name="create_alt_account">Create alt accounts</string>
    <string name="balance">Balance</string>
    <string name="ylp">YLP</string>
    <string name="points">Points</string>
    <string name="gold_coins">金币</string>
    <string name="verify_id">Verification</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter your old password</string>
    <string name="new_password">New Password</string>
    <string name="_6_15_letters_numbers">6~15 letters and/or digits</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="re_enter_new_password">Please confirm your password</string>
    <string name="ok">OK</string>
    <string name="choose_alt_account_to_login">Choose an alt account to login</string>
    <string name="about_alt_accounts">About alt accounts</string>
    <string name="exchange_platform_coins">Exchange for YLPD</string>
    <string name="exchange_records">Exchange History</string>
    <string name="platform_coins">YLPD</string>
    <string name="time">Time</string>
    <string name="no_records">No records</string>
    <string name="exchange_for_platform_coins">Exchange for YLPD</string>
    <string name="account_points">Points you earned</string>
    <string name="amount_to_exchange">Amount</string>
    <string name="points_needed">消耗积分数</string>
    <string name="points_to_coins_exchange_rate">(兑换比例：100 Points = 1 YLPD)</string>
    <string name="exchange_now">Exchange</string>
    <string name="exchange_record">Exchange History</string>
    <string name="enter_platform_coins_needed">输入需要兑换的平台币数量</string>
    <string name="rebates">Discount</string>
    <string name="gift_packs">Gift Packs</string>
    <string name="vip_gift_packs">VIP Gift Pack</string>
    <string name="normal_gift_packs">Gift Pack</string>
    <string name="no_gift_packs">No gift packs</string>
    <string name="gift_pack_details">In the Pack</string>
    <string name="apply">Apply</string>
    <string name="loading">Loading</string>
    <string name="left">Left</string>
    <string name="activation_code">Activation Code：</string>
    <string name="copy">Copy</string>
    <string name="valid_for">Validity: </string>
    <string name="gift_pack_content">What\'s In: </string>
    <string name="how_to_use">How to Use: </string>
    <string name="notes">Notes: </string>
    <string name="membership_level">Membership Level</string>
    <string name="current_level">Current Level：</string>
    <string name="to_next_level">（距离下一等级还差</string>
    <string name="level">Level</string>
    <string name="total_purchase_amount">消费额</string>
    <string name="total_purchase_amount_desc_1">1、消费额指在游戏内使用支付宝、微信、平台币、绑币等方式进行支付的消费金额。</string>
    <string name="total_purchase_amount_desc_2">2、消费额在Payment done successfully后，实时增加，每日无上限。</string>
    <string name="total_purchase_amount_desc_3">3、使用代金券、话费充值手游金额及充值平台增值服务金额不包含在内。</string>
    <string name="account_balance">Account Balance</string>
    <string name="message_center">Message Center</string>
    <string name="encourage_interaction">No likes yet. </string>
    <string name="message_content">Content</string>
    <string name="rewarding_platform_coins">YLPD Rewards：</string>
    <string name="share_this_game">Share this game：</string>
    <string name="invite_my_friend">邀请好友账号：</string>
    <string name="registration_time">注册时间：</string>
    <string name="share_again">继续分享</string>
    <string name="modify">Change</string>
    <string name="account_label">账号：</string>
    <string name="platform_coins_0">YLPD:0</string>
    <string name="points_0">积分:0</string>
    <string name="gold_0">金币:0</string>
    <string name="share">Share</string>
    <string name="community">社区</string>
    <string name="red_pack">Red Pack</string>
    <string name="discount">Discount</string>
    <string name="alt_accounts">Alts</string>
    <string name="auto_login">Auto-login</string>
    <string name="login_options">Turn off to choose alt accounts after login</string>
    <string name="hide_button">Hide Floating Button</string>
    <string name="link_account">绑定账号</string>
    <string name="go_to_link">Link</string>
    <string name="link_phone_number">绑定手机号</string>
    <string name="link_email_address">Link Email Address</string>
    <string name="current_version">Current Version</string>
    <string name="v2_0_0">v2.0.0</string>
    <string name="screen_recording">录屏</string>
    <string name="close_my_account">Delete My Account</string>
    <string name="guess_you_like">Guess You Like</string>
    <string name="back_to_game">Back to the Game</string>
    <string name="user_agreement">User Agreement</string>
    <string name="and"> and </string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="topup_platform_coins">平台币充值</string>
    <string name="topup_records">充值记录</string>
    <string name="topup_to_account">充值账号</string>
    <string name="topup_amount">充值金额</string>
    <string name="topup_amount_is_integer_greater_than_0">充值金额需为正整数</string>
    <string name="you_can_get">可获得</string>
    <string name="platform_coins_exchange_rate_1_1">平台币（1平台币=1 USD）</string>
    <string name="payment_method">支付方式</string>
    <string name="stripe_payment">支付宝支付</string>
    <string name="ylp_payment">微信支付</string>
    <string name="confirm_payment">确认支付</string>
    <string name="scan_to_pay"><![CDATA[扫码支付>]]></string>
    <string name="billing_records">Purchase History</string>
    <string name="total_purchases">Total：</string>
    <string name="total_purchases_amount_40_00">￥40.00</string>
    <string name="no_purchase_records">~ Nothing ~</string>
    <string name="bottom">Bottom ~</string>
    <string name="records_0">共0条记录</string>
    <string name="no_topup_records">No records</string>
    <string name="benefits">Benefits</string>
    <string name="please_choose_topup_method">Choose Topup Method</string>
    <string name="product_price_amount">Price</string>
    <string name="price_0_01">0.01USD</string>
    <string name="dollar">USD</string>
    <string name="product_name">Name:</string>
    <string name="discount_label">Discount:--</string>
    <string name="stripe">支付宝</string>
    <string name="use_platfom_coins_to_pay">前往平台币付款</string>
    <string name="send">Send</string>
    <string name="coupons">Coupons</string>
    <string name="available_for_application">Available</string>
    <string name="applied">Applied</string>
    <string name="expired">Expired</string>
    <string name="use_coupons">Use the coupon</string>
    <string name="no_coupons">No coupons</string>
    <string name="apply_more_coupons">Apply more coupons</string>
    <string name="forgot_password">Forgot password</string>
    <string name="verify_identity">Verification</string>
    <string name="verify_security">安全验证</string>
    <string name="reset_password">Reset Password</string>
    <string name="done">Done</string>
    <string name="please_enter_username">Enter Username</string>
    <string name="next">Next</string>
    <string name="cannot_reset_password_please">Failed to reset password. Please contact </string>
    <string name="contact_customer_service"><![CDATA[Customer Service>]]></string>
    <string name="your_account_label">Your Account：</string>
    <string name="phone_number_label">手机号码：</string>
    <string name="please_enter_verification_code">请输入验证码</string>
    <string name="get_verification_code">Get a code</string>
    <string name="previous">Last</string>
    <string name="use_phone_number_to_reset_password">切换至手机号找回</string>
    <string name="your_username_label">Your Account：</string>
    <string name="please_enter_password_again">请再次输入密码</string>
    <string name="password_reset_successfully">密码修改成功!</string>
    <string name="back">Back</string>
    <string name="seconds_to_redirect"> to skip</string>
    <string name="click">Click</string>
    <string name="back_to_platform">Back to the platform</string>
    <string name="my_alt_accounts">My alt accounts</string>
    <string name="game_label">Game: </string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="announcement_title">经典还原，热血复古手游</string>
    <string name="server_online_time">开服时间：2018/04/05</string>
    <string name="game_server">游戏区服：土城36区</string>
    <string name="announcement_details">激战世界，啊可接受的拉肯定会爱江山代理费爱上多了阿金书店拉三等奖阿里卡收到货阿斯加德发觉到付好了的法拉盛电费卡拉集上地方好垃圾收电费卡拉集上砥砺奋进爱上第六届开发爱上邓丽君发了数据库的发送还打飞机啊束带结发阿拉斯加地方</string>
    <string name="got_it">Got it</string>
    <string name="are_you_sure_to_close_account">Are you sure to delete your account？</string>
    <string name="all_data_will_be_lost_after_account_deletion">All data includng balance will be cleared after deletion and can not be recovered, please confirm.</string>
    <string name="yes_im_sure">I\'m sure</string>
    <string name="let_me_think_again">Let me think</string>
    <string name="user_account_deletion_agreement">User Account Deletion Agreement</string>
    <string name="about_alt_account">About Alt Accounts</string>
    <string name="alt_account_desc">1. You can create 20 alt accounts maximum in one game\n2. Each alt account is completely independent from others\n3. You can sell some of your alt accounts on the marketplace without affecting others</string>
</resources>