<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <RelativeLayout
            android:id="@+id/btn_mch_back"
            android:layout_width="45dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="20dp"
                android:background="@drawable/mch_common_icon_back"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_password"
            android:textColor="#222222"
            android:textSize="19dp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#DEE3E4"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:background="@drawable/mch_et_bg"
        android:layout_height="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:text="@string/old_password"
            android:textColor="#333333"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/edit_yuanPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="140dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/enter_old_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textColor="#666666"
            android:textSize="14dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:background="@drawable/mch_et_bg"
        android:layout_height="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:text="@string/new_password"
            android:textColor="#333333"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/edit_newPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="140dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/_6_15_letters_numbers"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textColor="#666666"
            android:textSize="14dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:background="@drawable/mch_et_bg"
        android:layout_height="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:text="@string/confirm_new_password"
            android:textColor="#333333"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/edit_queRenPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="140dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/re_enter_new_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textColor="#666666"
            android:textSize="14dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/btn_mch_chagePass"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/ok"
        android:textColor="#fff"
        android:background="@drawable/mch_btn_lan_bg"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="14dp"
        />

</LinearLayout>