<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <RelativeLayout
            android:id="@+id/btn_mch_back"
            android:layout_width="45dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="20dp"
                android:background="@drawable/mch_common_icon_back"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/exchange_for_platform_coins"
            android:textColor="#222222"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/btn_mch_dhjl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:text="@string/exchange_record"
            android:textColor="@color/mch_yanse"
            android:textSize="15dp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#DEE3E4"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/account_points"
            android:textColor="#444444"
            android:textSize="14dp" />
        <TextView
            android:id="@+id/tv_jf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="15dp"
            android:textColor="@color/mch_yanse"
            android:layout_centerVertical="true"
            android:layout_marginLeft="104dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f2f2f2"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/amount_to_exchange"
            android:textColor="#444444"
            android:textSize="14dp" />
        <EditText
            android:id="@+id/edit_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15dp"
            android:textColor="#222222"
            android:maxLength="5"
            android:hint="@string/enter_platform_coins_needed"
            android:textColorHint="#C1C1C4"
            android:layout_centerVertical="true"
            android:layout_marginLeft="104dp"
            android:background="@null"
            android:singleLine="true"
            android:inputType="number"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f2f2f2"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:text="@string/points_needed"
            android:textColor="#444444"
            android:textSize="14dp" />
        <TextView
            android:id="@+id/tv_xhjf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="15dp"
            android:textColor="@color/mch_yanse"
            android:layout_centerVertical="true"
            android:layout_marginLeft="104dp"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_dhbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points_to_coins_exchange_rate"
        android:textSize="12dp"
        android:singleLine="true"
        android:layout_marginLeft="24dp"
        android:textColor="#C1C1C4"
        android:layout_marginBottom="8dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f2f2f2"
        />
    
    <TextView
        android:id="@+id/btn_mch_duihuan"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:text="@string/exchange_now"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_marginTop="17dp"
        android:background="@drawable/mch_btn_lan_bg"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
</LinearLayout>